Bug 134667 - Cannot export drawing with rotated text to EPS
Summary: Cannot export drawing with rotated text to EPS
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.0.0.beta1+
Hardware: All Linux (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.1.0 target:7.0.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-07-08 23:12 UTC by Kai
Modified: 2020-07-17 23:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Test file (8.89 KB, application/vnd.oasis.opendocument.graphics)
2020-07-08 23:13 UTC, Kai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai 2020-07-08 23:12:50 UTC
Description:
Hi all,

I used to be able to export all of my ODG files without problems to EPS. However, recently I noticed that files with rotated text do not export anymore.

More concretely, libreoffice gets stuck using 100% cpu and creates a *.tmp file of multiple GB(!) size.

This might be an issue with my local install as it used to work just fine and suddenly stopped. I updated to the new RC and got the same issue. 

I am attaching a test file to this bug. Exporting to PDF like so works 
`libreoffice7.0 --headless --convert-to pdf ./eps_test.odg`
But this does not
`libreoffice7.0 --headless --convert-to eps ./eps_test.odg`

Thanks,
Kai


Steps to Reproduce:
1. Run the command `libreoffice7.0 --headless --convert-to pdf ./eps_test.odg`

Actual Results:
Libreoffice freezes / hogs CPU.

Expected Results:
EPS gets exported.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
.
Comment 1 Kai 2020-07-08 23:13:39 UTC
Created attachment 162817 [details]
Test file
Comment 2 Andrew Watson 2020-07-09 08:37:22 UTC
Bug reproduced with:

Version: 7.0.0.1
Build ID: 04ba7e3f1e51af6c5d653e543a620e36719083fd
CPU threads: 4; OS: Mac OS X 10.11.6; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded

-- AND --

Version: 7.0.0.0.beta2
Build ID: 1c213561a365b5666167321de68c9977500c9612
CPU threads: 4; OS: Mac OS X 10.11.6; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded

(I reporoduced bug by opening sample file, then select File>Export..., then select "EPS"; not via command line).

Bug NOT present in:

Version: 6.4.4.2
Build ID: 3d775be2011f3886db32dfd395a6a6d1ca2630ff
CPU threads: 4; OS: Mac OS X 10.11.6; UI render: default; VCL: osx; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-GB
Calc: threaded

Set status to "New", changed earlist version to 7.0.0.0beta1+, added "Regression" keyword.
Comment 3 Attila Baraksó (NISZ) 2020-07-11 16:46:58 UTC
Actually, steps to reproduce is: 
1. Run the command `libreoffice7.0 --headless --convert-to eps ./eps_test.odg`

Well, HEAD^1 this worked, so looks like this was the first bad commit:

Bibisected using linux-64-7.0 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=cf82475c785c47327cdc9d591d63d7a82dd1ac53
author: shashikdm <shashikant.123kadam@gmail.com>
committer: Michael Stahl <michael.stahl@cib.de>
summary: tdf#114441 Changing sal_uLong to appropriate integer type in filters module

@Micheal: Would you look and confirm this? Thanks!
Comment 4 Commit Notification 2020-07-13 17:06:38 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/af97e1053f79ea4a913c3bd11cc779f355006f38

tdf#134667 filter: EPS export: fix integer unsigned->signed SNAFU

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl 2020-07-13 17:07:25 UTC
fixed on master
Comment 6 Commit Notification 2020-07-14 06:43:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/6f879fb63a081e8be3cd31c15f1c3fd1c893ef19

tdf#134667 filter: EPS export: fix integer unsigned->signed SNAFU

It will be available in 7.0.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Attila Baraksó (NISZ) 2020-07-16 09:12:10 UTC
Verified in:

Version: 7.1.0.0.alpha0+
Build ID: cb6a7b988a00500fbc4116c38bc1a959ca16d065
CPU threads: 6; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF-dbg, Branch:master, Time: 2020-07-15_23:14:02
Calc: threaded

@Michael: Thanks for fixing this issue!
Comment 8 Kai 2020-07-17 23:21:46 UTC
Works for me too. Thanks!