tdf#134667 filter: EPS export: fix integer unsigned->signed SNAFU

In PSWriter::ImplWriteF(), (nCount + 1) - nLen used to be unsigned long
but now it's unsigned 32-bit int so on 64-bit platform values > 2^31
no longer init nStSize to negative values.

(regression from cf82475c785c47327cdc9d591d63d7a82dd1ac53)

Change-Id: Ib17537cf67c80883f10cf2a3b7e38d6a8f8dfcb7